# latte-compiler

./: .gitignore  Makefile  latc.cabal  stack.yaml  t1.txt
app/: Main.hs
grammar/: Latte.cf
lib/: runtime.c
src/: Backend.hs  Frontend.hs  Frontend_old.hs  GenAsm.hs  GenIR.hs  IR.hs  Linearise.hs  Linearize.hs  Linearscan.hs  Liveness.hs  Opt.hs  RegAlloc.hs  X86DSL.hs
test/: Spec.hs
