name:                latc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/latc#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Markiewicz
maintainer:          adamm24680@gmail.com
copyright:           2016 Adam Markiewicz
category:            Web
build-type:          Simple
extra-source-files:  {}
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , grammar
  exposed-modules:     Frontend
                     , GenAsm
                     , Linearize
                     , Linearscan
                     , X86DSL
                     , Liveness
                     , GenIR
                     , IR
                     , Opt
                     , AbsLatte
                     , ErrM
                     , LexLatte
                     , ParLatte
                     , PrintLatte
  build-depends:       base >= 4.7 && < 5
                     , hoopl
                     , array
                     , mtl
                     , containers
                     , generic-deriving
  default-language:    Haskell2010

executable latc_x86
  hs-source-dirs:      app
                     , grammar
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , latc
                     , filepath
                     , process
                     , directory
  default-language:    Haskell2010

test-suite latc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , latc
                     , process
                     , directory
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N -W
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamm24680/latte-compiler.git
